Fix menu position on mobile

--- a/sass/oscailte/base/_navigation.scss
+++ b/sass/oscailte/base/_navigation.scss
@@ -69,7 +69,7 @@ header .grid {
 
 .menu {
   margin: 0;
-  top: 68px;
+  top: 138px;
 }
 
 .menu li a{
